ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: budgetapp.us.to
      http:
        paths:
          - path: /income
            pathType: Prefix
            backend:
              service:
                name: budget-service
                port:
                  number: 9000
          - path: /transaction
            pathType: Prefix
            backend:
              service:
                name: transaction-service
                port:
                  number: 9001
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 9005
